components/Markdown/Markdown.css
.msrd .msrd-Markdown {
  font-size: var(--font-03-size);
  line-height: var(--font-03-line-height);
}

.msrd .msrd-Markdown--measured {
  max-width: var(--measured);
}

.msrd .msrd-Markdown--inline {
  font: inherit;
  max-width: 100%;
}

@media (min-width: 48em) {
  .msrd .msrd-Markdown {
    font-size: var(--font-04-size);
    line-height: var(--font-04-line-height-large);
  }

  .msrd .msrd-Markdown--inline {
    font: inherit;
  }
}

.msrd .msrd-Markdown a {
  color: var(--color-interactive);
  text-decoration: none;
}

@media (hover: hover) {
  .msrd .msrd-Markdown a:hover {
    color: var(--color-interactive-hover);
    text-decoration: underline;
    text-decoration-thickness: 0.09em;
    text-underline-offset: 0.34em;
  }
}

.msrd .msrd-Markdown a:active {
  color: var(--color-interactive-active);
  text-underline-offset: 0.39em;
}

.msrd .msrd-Markdown blockquote {
  margin-bottom: var(--space-vertical-05);
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
}

.msrd .msrd-Markdown blockquote p {
  margin-bottom: 0;
  quotes: "“" "”" "‘" "’";
}

.msrd .msrd-Markdown blockquote p:first-child::before {
  content: open-quote;
  margin-left: -0.81ch;
}

.msrd .msrd-Markdown blockquote p:first-child::after {
  content: close-quote;
}

.msrd .msrd-Markdown blockquote p + p {
  margin-top: var(--space-vertical-05);
}

.msrd .msrd-Markdown blockquote p + p:last-child {
  font-size: var(--font-02-size);
  line-height: var(--font-02-line-height);
  margin-top: var(--space-vertical-03);
  text-align: right;
}

@media (min-width: 48em) {
  .msrd .msrd-Markdown blockquote p + p:last-child {
    font-size: var(--font-03-size);
    line-height: var(--font-03-line-height);
  }
}

.msrd .msrd-Markdown code {
  --padding-x-code-inline: 0.25em;
  background: var(--color-background-highlight);
  border-radius: var(--padding-x-code-inline);
  font-family: var(--font-family-monospaced);
  font-feature-settings: normal;
  font-weight: inherit;
  line-height: inherit;
  padding-bottom: 0.055em;
  padding-left: var(--padding-x-code-inline);
  padding-right: var(--padding-x-code-inline);
}

@media (min-width: 48em) {
  .msrd .msrd-Markdown p code {
    padding-bottom: 0.2em;
  }
}

.msrd .msrd-Markdown code .gfm-color-chip {
  --chip-size: 0.6em;
  border: var(--border-width) solid var(--color-background);
  border-radius: calc(var(--chip-size) * var(--corner-ratio-square));
  display: inline-block;
  height: var(--chip-size);
  margin-left: 0.25em;
  width: var(--chip-size);
}

@media (prefers-color-scheme: dark) {
  .msrd .msrd-Markdown code {
    box-shadow: var(--box-shadow);
  }
}

.msrd .msrd-Markdown pre {
  border-radius: var(--border-radius-card);
  box-shadow: var(--box-shadow-light-source);
  position: relative;
}

.msrd .msrd-Markdown pre::after {
  border: solid var(--border-width) var(--color-border-code);
  border-radius: var(--border-radius-card);
  bottom: var(--border-offset-card);
  content: "";
  left: calc(0rem - var(--border-offset-card));
  pointer-events: none;
  position: absolute;
  right: var(--border-offset-card);
  top: calc(0rem - var(--border-offset-card));
}

.msrd .msrd-Markdown pre code {
  border-radius: var(--border-radius-card);
  box-shadow: var(--box-shadow);
  display: block;
  font-family: var(--font-family-monospaced);
  font-feature-settings: normal;
  font-size: var(--font-02-size);
  font-weight: inherit;
  line-height: var(--font-02-line-height);
  margin-bottom: var(--space-vertical);
  overflow-x: auto;
  padding: var(--space-vertical);
  position: relative;
  width: 100%;
}

.msrd .msrd-Markdown h6 {
  font-size: var(--font-02-size);
  font-weight: 533;
  line-height: var(--font-02-line-height);
  margin-bottom: var(--space-vertical-03);
  margin-top: var(--space-vertical);
}

@media (min-width: 48em) {
  .msrd .msrd-Markdown h6 {
    margin-bottom: var(--space-vertical);
    margin-top: var(--space-vertical-06);
  }
}

.msrd .msrd-Markdown h5 {
  font-size: var(--font-03-size);
  font-weight: 500;
  line-height: var(--font-03-line-height);
  margin-bottom: var(--space-vertical-03);
  margin-top: var(--space-vertical);
}

@media (min-width: 48em) {
  .msrd .msrd-Markdown h5 {
    font-size: var(--font-04-size);
    line-height: var(--font-04-line-height);
    margin-bottom: var(--space-vertical);
    margin-top: var(--space-vertical-06);
  }
}

.msrd .msrd-Markdown h4 {
  font-size: var(--font-04-size);
  font-weight: 466;
  line-height: var(--font-04-line-height);
  margin-bottom: var(--space-vertical-03);
  margin-top: var(--space-vertical);
}

@media (min-width: 48em) {
  .msrd .msrd-Markdown h4 {
    font-size: var(--font-05-size);
    line-height: var(--font-05-line-height);
    margin-bottom: var(--space-vertical);
    margin-top: var(--space-vertical-06);
  }
}

.msrd .msrd-Markdown h3 {
  font-size: var(--font-05-size);
  font-weight: 433;
  line-height: var(--font-05-line-height);
  margin-bottom: var(--space-vertical-03);
  margin-top: var(--space-vertical);
}

@media (min-width: 48em) {
  .msrd .msrd-Markdown h3 {
    font-size: var(--font-06-size);
    line-height: var(--font-06-line-height);
    margin-bottom: var(--space-vertical);
    margin-top: var(--space-vertical-06);
  }
}

.msrd .msrd-Markdown h2 {
  font-size: var(--font-07-size);
  font-weight: 400;
  line-height: var(--font-07-line-height);
  margin-bottom: var(--space-vertical-03);
  margin-top: var(--space-vertical);
}

@media (min-width: 48em) {
  .msrd .msrd-Markdown h2 {
    font-size: var(--font-08-size);
    line-height: var(--font-08-line-height);
    margin-bottom: var(--space-vertical);
    margin-top: var(--space-vertical-06);
  }
}

.msrd .msrd-Markdown h1 {
  font-size: var(--font-09-size);
  font-weight: 400;
  line-height: var(--font-09-line-height);
  margin-top: 0;
}

@media (min-width: 48em) {
  .msrd .msrd-Markdown h1 {
    font-size: var(--font-10-size);
    line-height: var(--font-10-line-height);
  }
}

.msrd .msrd-Markdown h1 + h2,
.msrd .msrd-Markdown h2 + h3,
.msrd .msrd-Markdown h3 + h4,
.msrd .msrd-Markdown h4 + h5,
.msrd .msrd-Markdown h5 + h6 {
  margin-top: 0;
}

.msrd .msrd-Markdown hr {
  background-color: var(--color-brand);
  border: 0;
  color: var(--color-border);
  height: var(--rule-height);
  margin-bottom: var(--space-vertical);
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  width: var(--rule-width);
}

.msrd .msrd-Markdown p:has(img) {
  box-shadow: var(--box-shadow-light-source);
}

.msrd .msrd-Markdown img {
  border-radius: var(--border-radius-image);
  box-shadow: var(--box-shadow);
}

.msrd .msrd-Markdown li {
  --bullet-space: 1.5em;
  padding-left: var(--bullet-space);
  position: relative;
  word-wrap: break-word;
}

.msrd .msrd-Markdown li::before {
  left: 0;
  position: absolute;
  text-align: center;
  width: var(--bullet-space);
}

.msrd .msrd-Markdown ol,
.msrd .msrd-Markdown ul {
  list-style: none;
  margin-bottom: var(--space-vertical);
  margin-left: 0;
  margin-top: 0;
  padding-left: 0;
}

@media (min-width: 80em) {
  .msrd .msrd-Markdown > ol,
  .msrd .msrd-Markdown > ul {
    margin-left: calc(30rem / -16);
  }
}

.msrd .msrd-Markdown ol {
  counter-reset: list;
}

.msrd .msrd-Markdown ol > li::before {
  content: counter(list) ".";
  counter-increment: list;
  font-family: var(--font-family-monospaced);
  font-feature-settings: normal;
  font-size: calc(13rem / 16);
  line-height: calc(27 / 13);
  padding-right: calc(3rem / 16);
  text-align: right;
  width: calc(27rem / 16);
}

@media (min-width: 48em) {
  .msrd .msrd-Markdown ol > li::before {
    font-size: calc(14rem / 16);
    line-height: calc(36 / 14);
    padding-right: calc(4rem / 16);
    width: calc(30rem / 16);
  }
}

.msrd .msrd-Markdown ul > li::before {
  content: "•";
}

.msrd .msrd-Markdown p {
  margin-bottom: var(--space-vertical);
  margin-top: 0;
  word-wrap: break-word;
}

.msrd .msrd-Markdown > p:last-child {
  text-wrap: pretty;
}

.msrd .msrd-Markdown table {
  border-collapse: collapse;
  font: inherit;
  font-family: var(--font-family-monospaced);
  font-feature-settings: normal;
  font-size: var(--font-02-size);
  font-weight: inherit;
  line-height: var(--font-02-line-height);
  margin-bottom: var(--space-vertical);
  width: 100%;
}

.msrd .msrd-Markdown tbody tr:nth-child(even) {
  background-color: var(--color-background-highlight);
}

.msrd .msrd-Markdown td,
.msrd .msrd-Markdown th {
  border: 1px solid var(--color-border);
  padding-bottom: calc(5.5rem / 16);
  padding-left: calc(15rem / 16);
  padding-right: calc(15rem / 16);
  padding-top: calc(5.5rem / 16);
  vertical-align: middle;
}

@media (min-width: 48em) {
  .msrd .msrd-Markdown td,
  .msrd .msrd-Markdown th {
    padding-bottom: calc(10rem / 16);
    padding-left: calc(23rem / 16);
    padding-right: calc(23rem / 16);
    padding-top: calc(10rem / 16);
  }
}

.msrd .msrd-Markdown #footnote-label {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  word-wrap: normal;
}

.msrd .msrd-Markdown #footnote-label + ol {
  font-size: var(--font-02-size);
  line-height: var(--font-02-line-height);
  margin-left: calc(30rem / -16);
  padding-top: var(--space-vertical-03);
}

.msrd .msrd-Markdown #footnote-label + ol::before {
  border: var(--border-width) solid var(--color-brand);
  content: "";
  display: block;
  height: var(--rule-height);
  margin-bottom: var(--space-vertical-06);
  position: relative;
  width: var(--rule-width);
}

@media (min-width: 80em) {
  .msrd .msrd-Markdown #footnote-label + ol::before {
    left: calc(30rem / 16);
  }
}

.msrd .msrd-Markdown #footnote-label + ol > li {
  padding-left: calc(27rem / 16);
}

@media (min-width: 48em) {
  .msrd .msrd-Markdown #footnote-label + ol > li {
    padding-left: calc(30rem / 16);
  }
}

.msrd .msrd-Markdown #footnote-label + ol > li::before {
  line-height: calc(var(--space-scale-vertical) / 13);
}

@media (min-width: 48em) {
  .msrd .msrd-Markdown #footnote-label + ol > li::before {
    line-height: calc(var(--space-scale-vertical) / 14);
  }
}

.msrd .msrd-Markdown [aria-describedby="footnote-label"]::before {
  content: "[";
}

.msrd .msrd-Markdown [aria-describedby="footnote-label"]::after {
  content: "]";
}

.msrd .msrd-Markdown .task-list-item {
  padding-left: 0;
}

.msrd .msrd-Markdown .task-list-item::before {
  content: "";
}

.msrd .msrd-Markdown > :first-child {
  margin-top: 0;
}

.msrd .msrd-Markdown > :last-child {
  margin-bottom: 0;
}

.msrd .msrd-Markdown--left {
  text-align: left;
}

.msrd .msrd-Markdown--center {
  text-align: center;
}

.msrd .msrd-Markdown--right {
  text-align: right;
}

